--- a/src/app/domains/shared/components/task-form/task-form.component.html
+++ b/src/app/domains/shared/components/task-form/task-form.component.html
@@ -7,16 +7,16 @@
 
   <!-- Campos de la Tarea -->
   <div class="mb-4">
-    <label class="block text-sm font-medium text-gray-700 mb-2">Nombre de la tarea:</label>
+    <label class="block text-sm font-medium text-gray-700 mb-2"
+      >Nombre de la tarea:</label
+    >
     <input
       formControlName="title"
       class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
       placeholder="Escribe el nombre de la tarea"
     />
     <div
-      *ngIf="
-        taskForm.get('title')?.invalid && taskForm.get('title')?.touched
-      "
+      *ngIf="taskForm.get('title')?.invalid && taskForm.get('title')?.touched"
       class="text-red-500 text-sm mt-1"
     >
       El nombre es obligatorio y debe tener al menos 5 caracteres.
@@ -24,10 +24,7 @@
   </div>
 
   <div class="mt-3 mb-4">
-    <label
-      for="deadline"
-      class="block text-sm font-medium text-gray-700 mb-1"
-    >
+    <label for="deadline" class="block text-sm font-medium text-gray-700 mb-1">
       Fecha Límite:
     </label>
     <input
@@ -35,6 +32,12 @@
       formControlName="deadline"
       class="border border-gray-300 rounded-md shadow-sm focus:ring focus:ring-blue-300 focus:border-blue-500 w-full p-2"
     />
+    <div
+      *ngIf="taskForm.get('deadline')?.invalid && taskForm.get('deadline')?.touched"
+      class="text-red-500 text-sm mt-1"
+    >
+      La fecha es obligatoria.
+    </div>
   </div>
 
   <!-- Personas -->
@@ -55,10 +58,22 @@
           class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"
           placeholder="Escribe el nombre completo"
         />
-        <div *ngIf="person.get('name')?.hasError('required') && person.get('name')?.touched" class="text-red-500 text-sm mt-1">
+        <div
+          *ngIf="
+            person.get('name')?.hasError('required') &&
+            person.get('name')?.touched
+          "
+          class="text-red-500 text-sm mt-1"
+        >
           El nombre es obligatorio y debe tener al menos 5 caracteres.
         </div>
-        <div *ngIf="person.get('name')?.hasError('duplicateName') && person.get('name')?.touched" class="text-red-500 text-sm mt-1">
+        <div
+          *ngIf="
+            person.get('name')?.hasError('duplicateName') &&
+            person.get('name')?.touched
+          "
+          class="text-red-500 text-sm mt-1"
+        >
           El nombre está duplicado.
         </div>
       </div>
@@ -101,11 +116,8 @@
           </button>
         </div>
         <div
-          *ngIf="
-            person.get('skills')?.invalid &&
-            person.get('skills')?.touched
-          "
-          class="text-red-500 text-sm mt-1 "
+          *ngIf="person.get('skills')?.invalid && person.get('skills')?.touched"
+          class="text-red-500 text-sm mt-1"
         >
           Debe agregar al menos una habilidad.
         </div>
@@ -121,7 +133,7 @@
         <button
           type="button"
           (click)="deletePerson(i)"
-          class="text-white bg-red-500 hover:bg-red-600 px-4 py-2 rounded-md "
+          class="text-white bg-red-500 hover:bg-red-600 px-4 py-2 rounded-md"
         >
           Eliminar Persona
         </button>
@@ -136,12 +148,12 @@
       Asociar Persona
     </button>
     <button
-    type="button"
-    [routerLink]="['/tareas']"
-    class="text-white bg-green-500 hover:bg-green-600 px-4 py-2 rounded-md"
-  >
-    Ver tareas
-  </button>
+      type="button"
+      [routerLink]="['/tareas']"
+      class="text-white bg-green-500 hover:bg-green-600 px-4 py-2 rounded-md"
+    >
+      Ver tareas
+    </button>
   </div>
 
   <button
